--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/open-sauce-one": "^5.0.7",
     "@fontsource/righteous": "^5.0.15",
     "@mui/icons-material": "^5.14.12",
+    "@mui/joy": "^5.0.0-beta.12",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "@popperjs/core": "^2.11.8",
