fix bug stock in cart and cancel

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
-VITE_API_BASE_URL=http://localhost:2500
-VITE_FE_BASE_URL=http://localhost:5173
+# VITE_API_BASE_URL=http://localhost:2500
+# VITE_FE_BASE_URL=http://localhost:5173
+VITE_API_BASE_URL=http://192.168.18.5:2500
+VITE_FE_BASE_URL=http://192.168.18.5:5173
