--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.1.3",
     "react-redux-loading-bar": "^5.0.4",
