--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "@mui/joy": "^5.0.0-beta.12",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@mui/x-data-grid": "^6.18.1",
+    "@mui/x-date-pickers": "^6.18.1",
+    "@mui/x-date-pickers-pro": "^6.18.1",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -30,6 +35,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-material-ui-carousel": "^3.4.2",
@@ -37,6 +43,7 @@
     "react-redux-loading-bar": "^5.0.4",
     "react-router-dom": "^6.16.0",
     "redux-thunk": "^2.4.2",
+    "rsuite": "^5.45.0",
     "socket.io-client": "^4.7.2",
     "yup": "^1.3.2",
     "yup-password": "^0.2.2"
