--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dropzone": "^14.2.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-redux-loading-bar": "^5.0.4",
     "react-router-dom": "^6.16.0",
