--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "redux-thunk": "^2.4.2",
     "rsuite": "^5.45.0",
     "socket.io-client": "^4.7.2",
+    "sweetalert2": "^11.10.1",
+    "sweetalert2-react-content": "^5.0.7",
     "yup": "^1.3.2",
     "yup-password": "^0.2.2"
   },
