--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.6.0",
     "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
